# qwen2-from-scratch

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md
bench/: gemv_bench.cu
include/: cuda_utils.h  kernel.h  layer.h  model.h  tensor.h
scripts/: create_test_data.py
src/: kernel.cu  layer.cc  layer.cu  main.cc  main.cpp  model.cc  tensor.cc
tests/: kernel_test.cc  kernel_test.cpp  layer_test.cc  tensor_test.cc
tests/data/: dense_cache_test.safetensors  dense_test.safetensors  embedding_test.safetensors  gemv_test.safetensors  gqa_masked_test.safetensors  gqa_test.safetensors  gqa_variable_len_test.safetensors  lm_head_test.safetensors  load_test.safetensors  matmul_test.safetensors  reshape_test.safetensors  rmsnorm_test.safetensors  sampler_test.safetensors  softmax_test.safetensors
